# linux_apps_btc08_test

./: .gitignore  Makefile.am  README.md  configure.ac  project.config
adc_test/: Makefile.am  main.c
btc08_test/: AutoTest.c  AutoTest.h  Btc08.c  Btc08.h  GpioControl.c  Makefile.am  NX_DbgMsg.c  ScenarioTest.c  ScenarioTest.h  SimpleWork.c  SimpleWork.h  SingleCommand.c  SingleCommand.h  Spi.c  Spi.h  TempCtrl.h  TestFunction.c  TestFunction.h  TestVector.c  TestVector.h  Utils.c  Utils.h  cgminer_test.h  main.c
btc08_test/engine/: Btc08.c  Btc08.h  GpioControl.c  GpioControl.h  NX_DbgMsg.c  NX_DbgMsg.h  NX_Queue.c  NX_Queue.h  NX_Semaphore.c  NX_Semaphore.h  PllCtrl.c  PllCtrl.h  Spi.c  Spi.h  TempCtrl.c  TempCtrl.h  Utils.c  Utils.h  sha2.c  sha2.h
btc08_test/org/: cgminer_test.c
test_scripts/: be2le.sh  bist.sh  gpio.sh  midstate.py  reset_autoaddr.sh  work.sh  workloop_1.sh  workloop_2.sh
